--- a/DnDToolkit.csproj
+++ b/DnDToolkit.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Character.pdf" />
+    <EmbeddedResource Include="Resources\Character.pdf" />
   </ItemGroup>
 
   <ItemGroup>
