--- a/DnDToolkit.csproj
+++ b/DnDToolkit.csproj
@@ -8,6 +8,8 @@
     <UseWPF>true</UseWPF>
 	<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
 	<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+	<AssemblyVersion>1.1.0</AssemblyVersion>
+	<FileVersion>1.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
