--- a/DnDToolkit.csproj
+++ b/DnDToolkit.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="itext.bouncy-castle-adapter" Version="9.4.0" />
     <PackageReference Include="itext.font-asian" Version="9.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+    <PackageReference Include="PDFsharp-WPF" Version="6.2.3" />
     <PackageReference Include="WPF-UI" Version="4.1.0" />
   </ItemGroup>
 
